fixes height of social icons and spacing on sections

--- a/css/style.css
+++ b/css/style.css
@@ -170,8 +170,9 @@ section {
 
 section h2 {
 	font-size: 32px;
-	margin-left: auto;
-	margin-right: auto;
+  	text-align: center;
+ 	 margin-bottom: 80px;
+
 }
 
 .container {
